// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Contextual Badge (Tag) Dark Color 1`] = `
<span
  className="sc-bdnylx klkYsZ"
  data-type="standard"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize={12}
  fontWeight={400}
  id="dark"
>
  Dark
</span>
`;

exports[`Storyshots Components/Contextual Badge (Tag) Error Color 1`] = `
<span
  className="sc-bdnylx gegMfQ"
  data-type="standard"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize={12}
  fontWeight={400}
  id="error"
>
  Error
</span>
`;

exports[`Storyshots Components/Contextual Badge (Tag) Info Color 1`] = `
<span
  className="sc-bdnylx cMBgVC"
  data-type="standard"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize={12}
  fontWeight={400}
  id="info"
>
  Info
</span>
`;

exports[`Storyshots Components/Contextual Badge (Tag) Light Color 1`] = `
<span
  className="sc-bdnylx cxVyHh"
  data-type="standard"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize={12}
  fontWeight={400}
  id="light"
>
  Light
</span>
`;

exports[`Storyshots Components/Contextual Badge (Tag) Playground 1`] = `
<span
  className="sc-bdnylx bTMpJH"
  data-type="standard"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize={12}
  fontWeight={400}
  id="playground"
>
  Example
</span>
`;

exports[`Storyshots Components/Contextual Badge (Tag) Primary Color 1`] = `
<span
  className="sc-bdnylx bTMpJH"
  data-type="standard"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize={12}
  fontWeight={400}
  id="primary"
>
  Primary
</span>
`;

exports[`Storyshots Components/Contextual Badge (Tag) Secondary Color 1`] = `
<span
  className="sc-bdnylx bOQbfj"
  data-type="standard"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize={12}
  fontWeight={400}
  id="secondary"
>
  Secondary
</span>
`;

exports[`Storyshots Components/Contextual Badge (Tag) Standard Type 1`] = `
<span
  className="sc-bdnylx bTMpJH"
  data-type="standard"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize={12}
  fontWeight={400}
  id="standard"
>
  Standard
</span>
`;

exports[`Storyshots Components/Contextual Badge (Tag) Success Color 1`] = `
<span
  className="sc-bdnylx fauhhf"
  data-type="standard"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize={12}
  fontWeight={400}
  id="success"
>
  Success
</span>
`;

exports[`Storyshots Components/Contextual Badge (Tag) Warning Color 1`] = `
<span
  className="sc-bdnylx flODLv"
  data-type="standard"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize={12}
  fontWeight={400}
  id="warning"
>
  Warning
</span>
`;
